# promptgres

./: .gitignore  .sqlfluff  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.cursor/rules/: clarification-first.mdc  python.mdc  schema.mdc  sql.mdc
.github/workflows/: ci.yml
examples/queries/: active_users.sql
examples/schema/: column_descriptions.yaml  pg_enums.xml  pg_schema.xml
scripts/: apply_descriptions.py  generate_description_template.py  get_enums.py  get_schema.py  release.py
src/promptgres/: __init__.py  __main__.py  cli.py  config.py  db.py  descriptions.py  exceptions.py  extractors.py  models.py  release.py  serializers.py
tests/: conftest.py  test_cli.py  test_config.py  test_db.py  test_descriptions.py  test_extractors.py  test_release.py  test_serializers.py
