[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "promptgres"
version = "0.1.0"
description = "PostgreSQL schema extraction and prompt-ready metadata tooling."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
  { name = "Promptgres Contributors" },
]
keywords = ["postgresql", "sql", "schema", "cli", "metadata"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "psycopg[binary]>=3.2.0",
  "python-dotenv>=1.0.0",
  "pyyaml>=6.0.0",
]

[project.scripts]
promptgres = "promptgres.cli:main"

[dependency-groups]
dev = [
  "ruff>=0.14.0",
]
release = [
  "commitizen>=3.29.0",
]
test = [
  "pytest>=8.3.0",
  "pytest-cov>=6.0.0",
]

[tool.hatch.build]
exclude = [
  ".coverage",
  ".pytest_cache/**",
  ".ruff_cache/**",
  ".uv-cache/**",
  ".venv/**",
  "build/**",
  "dist/**",
  "htmlcov/**",
]

[tool.hatch.build.targets.wheel]
packages = ["src/promptgres"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=promptgres --cov-report=term-missing --cov-fail-under=90"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = [
  "pyproject.toml:version",
]
tag_format = "v$version"
update_changelog_on_bump = false

[tool.coverage.run]
branch = true
source = ["promptgres"]

[tool.coverage.report]
show_missing = true
skip_covered = false
